# kseqpp_REad

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake  ExportCompileCommands.cmake  Options.cmake  PreventBuildingInCmakeDirectory.cmake  Profiling.cmake
scripts/: benchmark.sbatch  build.sh  test.sh
src/: CMakeLists.txt  benchmark.cpp  kseqpp_read.hpp  test.cpp
src/kseqpp_read/: kseqpp_read.hpp
test_objects/: fasta_empty_line.fna  queries.fna  queries.fnq
